--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <button onclick="getSynonyms()">sdfs</button>
+
+    <div id="container">
+        
+    </div>
     <script src = "script.js"></script>
 </body>
 </html>
